--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,13 @@
       <version>1.7</version>
     </dependency>
     <!--*************************************SCRIPT*************************************-->
+
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+    </dependency>
   </dependencies>
 
 </project>
